--- a/css/styles.css
+++ b/css/styles.css
@@ -131,3 +131,23 @@ p {
   max-width: 100%;
   height: auto;
 }
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 44px;
+    line-height: 56px;
+  }
+
+  h2 {
+    font-size: 44px;
+  }
+
+  h3 {
+    font-size: 26px;
+  }
+
+  .content {
+    text-align: center;
+    padding: 0;
+  }
+}
