--- a/css/styles.css
+++ b/css/styles.css
@@ -150,4 +150,10 @@ p {
     text-align: center;
     padding: 0;
   }
+
+  .hero {
+    background: lightskyblue;
+    text-align: center;
+    padding: 0;
+  }
 }
